# python-project-lvl1

./: pyproject.toml
brain_games/scripts/: brain_games.py
organizzzzm_brain_games.egg-info/: PKG-INFO  SOURCES.txt
