[tool.poetry]
name = "OrganiZzZzm_brain_games"
version = "0.1.0"
description = ""
authors = ["Alex Shvalev <a_shvalev@mail.ru>"]
packages = [
  { include = "brain_games" }
]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
